# TokenSavor

./: .env.example  .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml  scrooge_backend.py  scrooge_backend_version_info.txt
backend/scrooge/: attachment_optimizer.py  compressor.py  config.py  experiments.py  main.py  optimizer.py  pricing.py  proxy.py  quality.py  schemas.py  security.py  storage.py  token_meter.py
backend/scrooge/fixtures/: pricing_versions.json
backend/tests/: test_calculator_validation.py  test_compressor.py  test_enterprise_readiness.py  test_experiments.py  test_optimizer.py  test_pricing.py  test_proxy.py  test_quality.py  test_quality_api.py  test_storage.py
backend/tools/: evaluate_codex_usage_scenarios.py  evaluate_optimization_quality.py  run_optimization_ab.py  run_smoke_matrix.py  validate_attachment_savings.py  validate_calculator_savings.py  validate_hotkey_attachment_flow.py
docs/: ARCHITECTURE.md  COMPETITIVE_RESEARCH.md  RELEASE_TRUST.md
frontend/: index.html  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
reports/: a-ready-20260620-231540.json  attachment-validation-dev.json  attachment-validation-hotkey-dev.json  attachment-validation-installed.json  codex-scenario-evaluation-20260622-221552.json  codex-scenario-evaluation-20260622-221552.md  hotkey-attachment-validation-dev.json  hotkey-attachment-validation-uia-dev.json  install-ops-for-a-ready-20260620-231540.json  (+2 more)
(+21 files in other folders)
