[package]
name = "scrooge"
version = "0.1.0"
description = "Scrooge desktop shell"
authors = ["Scrooge contributors"]
edition = "2021"

[lib]
name = "scrooge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-shell = "2.0.0"
